--- a/src/styles.css
+++ b/src/styles.css
@@ -37,3 +37,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.card-header {
+  padding: 0rem 0rem 0rem 0rem !important;
+}
+
+.card {
+  box-shadow: none !important;
+}
