--- a/src/app/components/informe-categoria/informe-categoria.component.html
+++ b/src/app/components/informe-categoria/informe-categoria.component.html
@@ -117,14 +117,35 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
+          <div class="modal-body" [ngClass]="getSpinnerClass()">
+            <div class="loading" *ngIf="spinnerTable">
+              <div class="sk-cube-grid sp-position">
+                <div class="sk-cube sk-cube1"></div>
+                <div class="sk-cube sk-cube2"></div>
+                <div class="sk-cube sk-cube3"></div>
+                <div class="sk-cube sk-cube4"></div>
+                <div class="sk-cube sk-cube5"></div>
+                <div class="sk-cube sk-cube6"></div>
+                <div class="sk-cube sk-cube7"></div>
+                <div class="sk-cube sk-cube8"></div>
+                <div class="sk-cube sk-cube9"></div>
+                <p class="loadingText">Cargando...</p>
+              </div>
+            </div>
             <ul class="list-unstyled components">
-
+ 
               <li class="active">
                 <a href="#filterMArk" data-toggle="collapse" aria-expanded="false"
                   class="dropdown-toggle menu-color">Marca
                 </a>
                 <ul class="collapse list-unstyled" id="filterMArk">
+                  <li>
+                    <label class="control control--checkbox">
+                      <input class="marcaAll" type="checkbox" (change)="checkAllOrigin()" [checked]="isCheckedOrigin"/>
+                      Todo
+                    </label>
+                  </li>
+
                   <li *ngFor="let origin of originData; let marcaCheckCards = index">
                     <label class="control control--checkbox">
                       <input class="marcaCards" type="checkbox" name="{{origin.value}}"
@@ -142,6 +163,12 @@
                   class="dropdown-toggle menu-color">Categoria
                 </a>
                 <ul class="collapse list-unstyled" id="filterCategory">
+                  <li>
+                    <label class="control control--checkbox">
+                      <input class="categoriaAll" type="checkbox" (change)="checkAllCategory()" [checked]="isCheckedCategory"/>
+                      Todo
+                    </label>
+                  </li>
                   <li *ngFor="let category of categoryData; let categoriaCheckCards = index">
                     <label class="control control--checkbox">
                       <input class="categoriaCards" type="checkbox" value="{{category.value}}" name="{{category.value}}"
@@ -159,6 +186,12 @@
                   class="dropdown-toggle menu-color">Sub categoría
                 </a>
                 <ul class="collapse list-unstyled" id="filterSubCategory">
+                  <li>
+                    <label class="control control--checkbox">
+                      <input class="subCategoriaAll" type="checkbox" (change)="checkAllSubCategory()" [checked]="isCheckedSubCategory"/>
+                      Todo
+                    </label>
+                  </li>
                   <li *ngFor="let subcategory of subCategoryData; let subCategoriaCheckCards = index">
                     <label class="control control--checkbox">
                       <input class="subCategoriaCards" type="checkbox" value="{{subcategory.value}}"
@@ -178,6 +211,12 @@
                 </a>
                 <ul class="collapse list-unstyled" id="filterTipoPrenda">
                   <div class="overflow-auto container-scroll">
+                    <li>
+                      <label class="control control--checkbox">
+                        <input class="tipoPrendaAll" type="checkbox" (change)="checkAllTipoPrenda()" [checked]="isCheckedTipoPrenda"/>
+                        Todo
+                      </label>
+                    </li>
                     <li *ngFor="let tipoprenda of tipoPrendaData; let tipoPrendaCheckCards = index">
                       <label class="control control--checkbox">
                         <input class="tipoPrendaCards" type="checkbox" value="{{tipoprenda.value}}"
@@ -198,6 +237,11 @@
                 </a>
                 <ul class="collapse list-unstyled" id="filterColor">
                   <div class="overflow-auto checkboxAlign">
+                    <li>
+                      <label class="control control--checkbox">
+                        <input class="colorAll colorStyles2" type="checkbox" (change)="checkAllColor()" [checked]="isCheckedColor"/>
+                      </label>
+                    </li>
                     <div *ngFor="let color of colorData; let colorCheckCards = index">
                       <input class="colorCards colorStyles" type="checkbox" value="{{color.value}}" name="{{color.value}}"
                         title="{{color.text}}"
@@ -215,6 +259,12 @@
                 </a>
                 <ul class="collapse list-unstyled" id="filterComposicion">
                   <div class="overflow-auto container-scroll">
+                    <li>
+                      <label class="control control--checkbox">
+                        <input class="composicionAll" type="checkbox" (change)="checkAllComposicion()" [checked]="isCheckedcomposicion"/>
+                        Todo
+                      </label>
+                    </li>
                     <li *ngFor="let composicion of composicionData; let composicionCheckCards = index">
                       <label class="control control--checkbox">
                         <input class="composicionCards" type="checkbox" value="{{composicion.value}}"
@@ -233,14 +283,24 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" (click)="clearFiltersCards()">Limpiar filtros</button>
-            <button type="button" class="btn btn-primary" (click)="closeModalCards()">Aplicar filtros</button>
+            <button type="button" class="btn btn-primary" (click)="closeModalCards()">Cerrar filtros</button>
           </div>
         </ng-template>
       </div>
-      <div class="item-filters-top">
-        <div *ngFor="let filterCards of selectedFilterCards" class="content-filter-item">
-          <p class="item-filter">{{filterCards.item}}</p>
-        </div>
+      <div class="filtersTable">
+        <accordion [isAnimated]="true">
+          <accordion-group>
+            <button
+              class="btn btn-link btn-block justify-content-between btnAccordion"
+              accordion-heading type="button">
+              <div class="pull-left float-left">Filtros seleccionados</div>
+              <div class="arrow">
+                <span class="flechaFilters abajo"></span>
+              </div>
+            </button>
+            <span *ngFor="let filterCards of selectedFilterCards" class="item-filter">{{filterCards.item}} /&nbsp;</span>
+          </accordion-group>
+        </accordion>
       </div>
     </div>
 
@@ -362,9 +422,24 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" [ngClass]="getSpinnerClass()">
+              <div class="loading" *ngIf="spinnerTable">
+                <div class="sk-cube-grid sp-position">
+                  <div class="sk-cube sk-cube1"></div>
+                  <div class="sk-cube sk-cube2"></div>
+                  <div class="sk-cube sk-cube3"></div>
+                  <div class="sk-cube sk-cube4"></div>
+                  <div class="sk-cube sk-cube5"></div>
+                  <div class="sk-cube sk-cube6"></div>
+                  <div class="sk-cube sk-cube7"></div>
+                  <div class="sk-cube sk-cube8"></div>
+                  <div class="sk-cube sk-cube9"></div>
+                  <p class="loadingText">Cargando...</p>
+                </div>
+              </div>
               <ul class="list-unstyled components">
 
+                
                 <li class="active">
                   <a href="#filterMArk" data-toggle="collapse" aria-expanded="false"
                     class="dropdown-toggle menu-color">Marca
@@ -376,6 +451,7 @@
                         Todo
                       </label>
                     </li>
+
                     <li *ngFor="let origin of originData; let marcaCheck = index">
                       <label class="control control--checkbox">
                         <input class="marca" type="checkbox" name="{{origin.value}}"
@@ -447,6 +523,7 @@
                           Todo
                         </label>
                       </li>
+
                       <li *ngFor="let tipoprenda of tipoPrendaData; let tipoPrendaCheck = index">
                         <label class="control control--checkbox">
                           <input class="tipoPrenda" type="checkbox" value="{{tipoprenda.value}}"
@@ -512,20 +589,30 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-danger" (click)="clearFilters()">Limpiar filtros</button>
-              <button type="button" class="btn btn-primary" (click)="closeModal()">Aplicar filtros</button>
+              <button type="button" class="btn btn-primary" (click)="closeModal()">Cerrar filtros</button>
             </div>
           </ng-template>
         </div>
       </div>
-      <div class="item-filters-top">
-        <div *ngFor="let filter of selectedFilter" class="content-filter-item itemsMargin">
-          <p class="item-filter">{{filter.item}}</p>
-        </div>
+      <div class="filtersTable">
+        <accordion [isAnimated]="true">
+          <accordion-group>
+            <button
+              class="btn btn-link btn-block justify-content-between btnAccordion"
+              accordion-heading type="button">
+              <div class="pull-left float-left">Filtros seleccionados tabla</div>
+              <div class="arrow">
+                <span class="flechaFilters abajo"></span>
+              </div>
+            </button>
+            <span *ngFor="let filter of selectedFilter" class="item-filter">{{filter.item}} /&nbsp;</span>
+          </accordion-group>
+        </accordion>
       </div>
       <div class="tableContainer">
-        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"
-          class="table table-striped row-border hover marginTable">
-          <thead>
+        <p-table #dt1 [value]="photos" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" 
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" styleClass="p-datatable-striped p-datatable-gridlines" class="table table-striped table-hover table-sm">
+          <ng-template pTemplate="header">
             <tr>
               <th class="alignTableTitles">Categoría</th>
               <th class="alignTableTitles">Subcategoría</th>
@@ -536,20 +623,74 @@
               <th class="alignTableTitles">Tasa de frescura</th>
               <th class="alignTableTitles">Descuento promedio</th>
             </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let item of photos">
-              <td data-label="Categoría" class="alignTableItems"> {{item._id.categoria !== null ? item._id.categoria : 'sin dato'}} </td>
-              <td data-label="Subcategoría" class="alignTableItems"> {{item._id.subCategoria !== null ? item._id.subCategoria : 'sin dato'}} </td>
-              <td data-label="Tipo de prenda" class="alignTableItems"> {{item._id.tipoPrenda !== null ? item._id.tipoPrenda : 'sin dato'}} </td>
+            <tr>
+                <th>
+                    <span class="p-input-icon-right">
+                        <i class="pi pi-search"></i>
+                        <input pInputText type="text" (input)="dt1.filter($event.target.value, '_id.categoria', 'contains')" [value]="dt1.filters['_id.categoria']?.value" placeholder="Buscar" class="p-column-filter form-control">
+                    </span>
+
+                </th>
+                <th>
+                    <span class="p-input-icon-right">
+                        <i class="pi pi-search"></i>
+                        <input pInputText type="text" (input)="dt1.filter($event.target.value, '_id.subCategoria', 'contains')" [value]="dt1.filters['_id.subCategoria']?.value" placeholder="Buscar" class="p-column-filter form-control">
+                    </span>
+                </th>
+                <th>
+                    <span class="p-input-icon-right">
+                        <i class="pi pi-search"></i>
+                        <input pInputText type="text" (input)="dt1.filter($event.target.value, '_id.tipoPrenda', 'contains')" [value]="dt1.filters['_id.tipoPrenda']?.value" placeholder="Buscar" class="p-column-filter form-control">
+                    </span>
+                </th>
+                <th>
+                    <span class="p-input-icon-right">
+                        <i class="pi pi-search"></i>
+                        <input pInputText type="text" (input)="dt1.filter($event.target.value, 'SKU', 'contains')" [value]="dt1.filters['SKU']?.value" placeholder="Buscar" class="p-column-filter form-control">
+                    </span>
+                </th>
+                <th>
+                    <span class="p-input-icon-right">
+                        <i class="pi pi-search"></i>
+                        <input pInputText type="text" (input)="dt1.filter($event.target.value, 'precioPromedio', 'contains')" [value]="dt1.filters['precioPromedio']?.value" placeholder="Buscar" class="p-column-filter form-control">
+                    </span>
+                </th>
+                <th>
+                    <span class="p-input-icon-right">
+                        <i class="pi pi-search"></i>
+                        <input pInputText type="text" (input)="dt1.filter($event.target.value, 'nuevos', 'contains')" [value]="dt1.filters['nuevos']?.value" placeholder="Buscar" class="p-column-filter form-control">
+                    </span>
+                </th>
+                <th>
+                    <span class="p-input-icon-right">
+                        <i class="pi pi-search"></i>
+                        <input pInputText type="text" (input)="dt1.filter($event.target.value, 'tasaFrescura', 'contains')" [value]="dt1.filters['tasaFrescura']?.value" placeholder="Buscar" class="p-column-filter form-control">
+                    </span>
+                </th>
+                <th>
+                    <span class="p-input-icon-right">
+                        <i class="pi pi-search"></i>
+                        <input pInputText type="text" (input)="dt1.filter($event.target.value, 'porcentajeDescuento', 'contains')" [value]="dt1.filters['porcentajeDescuento']?.value" placeholder="Buscar" class="p-column-filter form-control">
+                    </span>
+                </th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-item>
+            <tr >
+              <td data-label="Categoría: " class="alignTableItems"> {{ !isCheckedCategory2 ? item._id.categoria : isCheckedCategory2 ? 'Todas' : 'sin
+                dato'}} </td>
+              <td data-label="Subcategoría: " class="alignTableItems"> {{ !isCheckedSubCategory2 ? item._id.subCategoria : isCheckedSubCategory2 ? 'Todas' : 'sin dato'}} </td>
+              <td data-label="Tipo de prenda" class="alignTableItems"> {{ !isCheckedTipoPrenda2 ? item._id.tipoPrenda : isCheckedTipoPrenda2 ? 'Todas' : 'sin
+                dato'}} </td>
               <td data-label="SKU" class="alignTableItems"> {{item.SKU !== null ? item.SKU : '0'}} </td>
-              <td data-label="Precio promedio" class="alignTableItems"> $ {{item.precioPromedio !== null ? item.precioPromedio : '0'}} </td>
+              <td data-label="Precio promedio" class="alignTableItems">$ {{item.precioPromedio !== null ? item.precioPromedio : '0'}} </td>
               <td data-label="Nueva llegada" class="alignTableItems"> {{item.nuevos !== null ? item.nuevos : '0'}} </td>
               <td data-label="Tasa de frescura" class="alignTableItems"> {{item.tasaFrescura !== null ? item.tasaFrescura : '0'}} </td>
               <td data-label="Descuento promedio" class="alignTableItems"> {{item.porcentajeDescuento !== null ? item.porcentajeDescuento : '0'}} % </td>
             </tr>
-          </tbody>
-        </table>
+          </ng-template>
+        
+        </p-table>
       </div>
       <!-- Fin tabla tipo de prenda -->
 
