--- a/src/app/components/informe-categoria/table2/table2.component.html
+++ b/src/app/components/informe-categoria/table2/table2.component.html
@@ -22,23 +22,36 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body" [ngClass]="getSpinnerClass()">
+        <div class="loading" *ngIf="spinnerTable">
+          <div class="sk-cube-grid sp-position">
+            <div class="sk-cube sk-cube1"></div>
+            <div class="sk-cube sk-cube2"></div>
+            <div class="sk-cube sk-cube3"></div>
+            <div class="sk-cube sk-cube4"></div>
+            <div class="sk-cube sk-cube5"></div>
+            <div class="sk-cube sk-cube6"></div>
+            <div class="sk-cube sk-cube7"></div>
+            <div class="sk-cube sk-cube8"></div>
+            <div class="sk-cube sk-cube9"></div>
+            <p class="loadingText">Cargando...</p>
+          </div>
+        </div>
         <ul class="list-unstyled components">
 
           <li class="active">
-            <a href="#filterMArk" data-toggle="collapse" aria-expanded="false"
-              class="dropdown-toggle menu-color">Marca
+            <a href="#filterMArk" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle menu-color">Marca
             </a>
             <ul class="collapse list-unstyled" id="filterMArk">
               <li>
                 <label class="control control--checkbox">
-                  <input class="marcaAll" type="checkbox" (change)="checkAllOrigin()" [checked]="isCheckedOrigin"/>
+                  <input class="marcaAll" type="checkbox" (change)="checkAllOrigin()" [checked]="isCheckedOrigin" />
                   Todo
                 </label>
               </li>
               <li *ngFor="let origin of originData; let marcaCheck = index">
                 <label class="control control--checkbox">
-                  <input class="marca2" type="checkbox" name="{{origin.value}}" 
+                  <input class="marca2" type="checkbox" name="{{origin.value}}"
                     (change)="validateCheckFilter2($event.target.checked, origin, $event.target.className, $event.target)"
                     id="{{'marca2'+marcaCheck}}"
                     value="{{origin.value !== '' ? validateCheckOrigin2(origin.value, marcaCheck) : origin.value}}" />
@@ -55,7 +68,8 @@
             <ul class="collapse list-unstyled" id="filterCategory">
               <li>
                 <label class="control control--checkbox">
-                  <input class="categoriaAll" type="checkbox" (change)="checkAllCategory()" [checked]="isCheckedCategory"/>
+                  <input class="categoriaAll" type="checkbox" (change)="checkAllCategory()"
+                    [checked]="isCheckedCategory" />
                   Todo
                 </label>
               </li>
@@ -78,7 +92,8 @@
             <ul class="collapse list-unstyled" id="filterSubCategory">
               <li>
                 <label class="control control--checkbox">
-                  <input class="subCategoriaAll" type="checkbox" (change)="checkAllSubCategory()" [checked]="isCheckedSubCategory"/>
+                  <input class="subCategoriaAll" type="checkbox" (change)="checkAllSubCategory()"
+                    [checked]="isCheckedSubCategory" />
                   Todo
                 </label>
               </li>
@@ -103,14 +118,14 @@
               <div class="overflow-auto container-scroll">
                 <li>
                   <label class="control control--checkbox">
-                    <input class="tipoPrendaAll" type="checkbox" (change)="checkAllTipoPrenda()" [checked]="isCheckedTipoPrenda"/>
+                    <input class="tipoPrendaAll" type="checkbox" (change)="checkAllTipoPrenda()"
+                      [checked]="isCheckedTipoPrenda" />
                     Todo
                   </label>
                 </li>
                 <li *ngFor="let tipoprenda of tipoPrendaData; let tipoPrendaCheck2 = index">
                   <label class="control control--checkbox">
-                    <input class="tipoPrenda2" type="checkbox" value="{{tipoprenda.value}}"
-                      name="{{tipoprenda.value}}"
+                    <input class="tipoPrenda2" type="checkbox" value="{{tipoprenda.value}}" name="{{tipoprenda.value}}"
                       (change)="validateCheckFilter2($event.target.checked, tipoprenda, $event.target.className, $event.target)"
                       id="{{'tipoprenda2'+tipoPrendaCheck2}}"
                       value="{{tipoprenda.value !== '' ? validateCheckTipoPrenda2(tipoprenda.value, tipoPrendaCheck2) : tipoprenda.value}}" />
@@ -122,14 +137,14 @@
           </li>
 
           <li class="active mt-2">
-            <a href="#filterColor" data-toggle="collapse" aria-expanded="false"
-              class="dropdown-toggle menu-color">Color
+            <a href="#filterColor" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle menu-color">Color
             </a>
             <ul class="collapse list-unstyled" id="filterColor">
               <div class="overflow-auto checkboxAlign">
                 <li>
                   <label class="control control--checkbox">
-                    <input class="colorAll colorStyles2" type="checkbox" (change)="checkAllColor()" [checked]="isCheckedColor"/>
+                    <input class="colorAll colorStyles2" type="checkbox" (change)="checkAllColor()"
+                      [checked]="isCheckedColor" />
                   </label>
                 </li>
                 <div *ngFor="let color of colorData; let colorCheck2 = index">
@@ -151,7 +166,8 @@
               <div class="overflow-auto container-scroll">
                 <li>
                   <label class="control control--checkbox">
-                    <input class="composicionAll" type="checkbox" (change)="checkAllComposicion()" [checked]="isCheckedcomposicion"/>
+                    <input class="composicionAll" type="checkbox" (change)="checkAllComposicion()"
+                      [checked]="isCheckedcomposicion" />
                     Todo
                   </label>
                 </li>
@@ -172,20 +188,32 @@
         </ul>
       </div>
       <div class="modal-footer">
+
         <button type="button" class="btn btn-danger" (click)="clearFilters2()">Limpiar filtros</button>
-        <button type="button" class="btn btn-primary" (click)="closeModal2()">Aplicar filtros</button>
+        <button type="button" class="btn btn-primary" (click)="closeModal2()">Cerrar filtros</button>
       </div>
     </ng-template>
   </div>
 </div>
-<div class="item-filters-top">
-  <div *ngFor="let filter2 of selectedFilter2" class="content-filter-item itemsMargin">
-    <p class="item-filter">{{filter2.item}}</p>
-  </div>
+<div class="filtersTable">
+  <accordion [isAnimated]="true">
+    <accordion-group>
+      <button class="btn btn-link btn-block justify-content-between btnAccordion" accordion-heading type="button">
+        <div class="pull-left float-left">Filtros seleccionados tabla</div>
+        <div class="arrow">
+          <span class="flechaFilters abajo"></span>
+        </div>
+      </button>
+      <span *ngFor="let filter2 of selectedFilter2" class="item-filter">{{filter2.item}} /&nbsp;</span>
+    </accordion-group>
+  </accordion>
 </div>
 <div class="tableContainer">
-  <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger2" class="table table-striped row-border hover">
-    <thead>
+
+  <!-- // estilo para intercalar grises p-datatable-striped   -->
+  <p-table #dt1 [value]="photos" [paginator]="true" [rows]="10" responsiveLayout="scroll" [showCurrentPageReport]="true" 
+  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" styleClass="p-datatable-gridlines p-datatable-striped " class="table table-striped table-hover ">
+    <ng-template pTemplate="header">
       <tr>
         <th class="alignTableTitles">Producto</th>
         <th class="alignTableTitles">Tipo de prenda</th>
@@ -196,20 +224,73 @@
         <th class="alignTableTitles">Precio</th>
         <th class="alignTableTitles">Descuento</th>
       </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let i of photos">
-        <td data-label="Producto" class="alignTableImage">
-          <img [src]="i.base64" class="prenda1" alt="imagen">
-        </td>
-        <td data-label="Tipo de prenda" class="alignTableItems"> {{i.tipoPrenda}} </td>
-        <td data-label="Retail" class="alignTableItems"> {{i.origin}} </td>
-        <td data-label="Color" class="alignTableItems"> {{i.color}} </td>
-        <td data-label="Talla" class="alignTableItems"> {{i.talla}} </td>
-        <td data-label="Talla" class="alignTableItems"> {{i.tallasAgotadas}} </td>
-        <td data-label="Precio" class="alignTableItems">$ {{setPrice(i.precio)}} </td>
-        <td data-label="Descuento" class="alignTableItems"> {{i.porcentajeDescuento !== null ? i.porcentajeDescuento : '0'}} % </td>
+      <tr>
+          <th>
+              <span class="p-input-icon-right">
+                  <i class="pi pi-search"></i>
+                  <input pInputText type="text" (input)="dt1.filter($event.target.value, '_id.categoria', 'contains')" [value]="dt1.filters['_id.categoria']?.value" placeholder="Buscar" class="p-column-filter form-control">
+              </span>
+
+          </th>
+          <th>
+              <span class="p-input-icon-right">
+                  <i class="pi pi-search"></i>
+                  <input pInputText type="text" (input)="dt1.filter($event.target.value, 'tipoPrenda', 'contains')" [value]="dt1.filters['tipoPrenda']?.value" placeholder="Buscar" class="p-column-filter form-control">
+              </span>
+          </th>
+          <th>
+              <span class="p-input-icon-right">
+                  <i class="pi pi-search"></i>
+                  <input pInputText type="text" (input)="dt1.filter($event.target.value, 'origin', 'contains')" [value]="dt1.filters['origin']?.value" placeholder="Buscar" class="p-column-filter form-control">
+              </span>
+          </th>
+          <th>
+              <span class="p-input-icon-right">
+                  <i class="pi pi-search"></i>
+                  <input pInputText type="text" (input)="dt1.filter($event.target.value, 'color', 'contains')" [value]="dt1.filters['color']?.value" placeholder="Buscar" class="p-column-filter form-control">
+              </span>
+          </th>
+          <th>
+              <span class="p-input-icon-right">
+                  <i class="pi pi-search"></i>
+                  <input pInputText type="text" (input)="dt1.filter($event.target.value, 'talla', 'contains')" [value]="dt1.filters['talla']?.value" placeholder="Buscar" class="p-column-filter form-control">
+              </span>
+          </th>
+          <th>
+              <span class="p-input-icon-right">
+                  <i class="pi pi-search"></i>
+                  <input pInputText type="text" (input)="dt1.filter($event.target.value, 'tallasAgotadas', 'contains')" [value]="dt1.filters['tallasAgotadas']?.value" placeholder="Buscar" class="p-column-filter form-control">
+              </span>
+          </th>
+          <th>
+              <span class="p-input-icon-right">
+                  <i class="pi pi-search"></i>
+                  <input pInputText type="text" (input)="dt1.filter($event.target.value, 'precio', 'contains')" [value]="dt1.filters['precio']?.value" placeholder="Buscar" class="p-column-filter form-control">
+              </span>
+          </th>
+          <th>
+              <span class="p-input-icon-right">
+                  <i class="pi pi-search"></i>
+                  <input pInputText type="text" (input)="dt1.filter($event.target.value, 'porcentajeDescuento', 'contains')" [value]="dt1.filters['porcentajeDescuento']?.value" placeholder="Buscar" class="p-column-filter form-control">
+              </span>
+          </th>
       </tr>
-    </tbody>
-  </table>
+    </ng-template>
+    <ng-template pTemplate="body" let-item>
+      <tr>
+        <td data-label="Producto" class="alignTableImage">
+          <img [src]="item.base64" class="prenda1" alt="imagen">
+        </td>
+        <td data-label="Tipo de prenda" class="alignTableItems"> {{item.tipoPrenda}} </td>
+        <td data-label="Retail" class="alignTableItems"> {{item.origin}} </td>
+        <td data-label="Color" class="alignTableItems"> {{item.color}} </td>
+        <td data-label="Talla" class="alignTableItems"> {{item.talla}} </td>
+        <td data-label="TallasAgotadas" class="alignTableItems"> <p>{{item.tallasAgotadas}}</p> </td>
+        <td data-label="Precio" class="alignTableItems">$ {{setPrice(item.precio)}} </td>
+        <td data-label="Descuento" class="alignTableItems"> {{item.porcentajeDescuento !== null ? item.porcentajeDescuento :
+          '0'}} % </td>
+      </tr>
+    </ng-template>
+      
+  </p-table>
 </div>
