--- a/src/app/components/productos/cat-kids/cat-kids.component.html
+++ b/src/app/components/productos/cat-kids/cat-kids.component.html
@@ -28,8 +28,22 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-          <ul class="list-unstyled components">
+        <div class="modal-body" >
+          <div class="loading" *ngIf="spinnerTable">
+            <div class="sk-cube-grid sp-position">
+              <div class="sk-cube sk-cube1"></div>
+              <div class="sk-cube sk-cube2"></div>
+              <div class="sk-cube sk-cube3"></div>
+              <div class="sk-cube sk-cube4"></div>
+              <div class="sk-cube sk-cube5"></div>
+              <div class="sk-cube sk-cube6"></div>
+              <div class="sk-cube sk-cube7"></div>
+              <div class="sk-cube sk-cube8"></div>
+              <div class="sk-cube sk-cube9"></div>
+              <p class="loadingText">Cargando...</p>
+            </div>
+          </div>
+          <ul class="list-unstyled components" [ngClass]="getSpinnerClass()">
 
             <li class="active">
               <p class="itemsModal">Marca</p>
@@ -94,17 +108,27 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" (click)="clearFilters()">Limpiar filtros</button>
-          <button type="button" class="btn btn-primary" (click)="closeModal()">Aplicar filtros</button>
+          <button type="button" class="btn btn-primary" (click)="closeModal()">Cerrar filtros</button>
         </div>
       </ng-template>
     </div>
   </div>
 </div>
 
-<div class="item-filters-top">
-  <div *ngFor="let filter of selectedFilter" class="content-filter-item">
-    <p class="item-filter">{{filter.item}}</p>
-  </div>
+<div class="filtersTable">
+  <accordion [isAnimated]="true">
+    <accordion-group>
+      <button
+        class="btn btn-link btn-block justify-content-between btnAccordion"
+        accordion-heading type="button">
+        <div class="pull-left float-left">Filtros seleccionados</div>
+        <div class="arrow">
+          <span class="flechaFilters abajo"></span>
+        </div>
+      </button>
+      <span *ngFor="let filter of selectedFilter" class="item-filter">{{filter.item}} /&nbsp;</span>
+    </accordion-group>
+  </accordion>
 </div>
 
 <div class="grid-container">
@@ -186,7 +210,21 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
+        <div class="modal-body" [ngClass]="getSpinnerClass()">
+          <div class="loading" *ngIf="spinnerTable">
+            <div class="sk-cube-grid sp-position">
+              <div class="sk-cube sk-cube1"></div>
+              <div class="sk-cube sk-cube2"></div>
+              <div class="sk-cube sk-cube3"></div>
+              <div class="sk-cube sk-cube4"></div>
+              <div class="sk-cube sk-cube5"></div>
+              <div class="sk-cube sk-cube6"></div>
+              <div class="sk-cube sk-cube7"></div>
+              <div class="sk-cube sk-cube8"></div>
+              <div class="sk-cube sk-cube9"></div>
+              <p class="loadingText">Cargando...</p>
+            </div>
+          </div>
           <ul class="list-unstyled components">
             <li class="active mt-2">
               <a href="#filterCategory" data-toggle="collapse" aria-expanded="false"
@@ -246,15 +284,23 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" (click)="clearFilters2()">Limpiar filtros</button>
-          <button type="button" class="btn btn-primary" (click)="closeModal2()">Aplicar filtros</button>
+          <button type="button" class="btn btn-primary" (click)="closeModal2()">Cerrar filtros</button>
         </div>
       </ng-template>
     </div>
-    <div class="item-filters-top itemsFilters">
-      <div *ngFor="let filterx of selectedFilter2" class="content-filter-item">
-        <p class="item-filter">{{filterx.item}}</p>
-      </div>
-    </div>
+    <accordion [isAnimated]="true">
+      <accordion-group>
+        <button
+          class="btn btn-link btn-block justify-content-between btnAccordion"
+          accordion-heading type="button">
+          <div class="pull-left float-left">Filtros seleccionados colores</div>
+          <div class="arrow">
+            <span class="flechaFilters abajo"></span>
+          </div>
+        </button>
+        <span *ngFor="let filterx of selectedFilter2" class="item-filter">{{filterx.item}} /&nbsp;</span>
+      </accordion-group>
+    </accordion>
     <div class="item2-content chartColor">
       <div class="chart-line">
         <canvas id="myChart"></canvas>
@@ -280,8 +326,8 @@
             <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[0]}}"><img
                   src="../../../../assets/productos/{{topTenTipoPrenda[0] !== '' ? topTenTipoPrenda[0] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
-            <td data-label="Total SKU">{{topTenTotalSKU[0]}}</td>
-            <td data-label="%">{{topTenPorcentajeSKU[0]}}%</td>
+            <td data-label="Total SKU">{{topTenTotalSKU[0] !== undefined ? topTenTotalSKU[0] : '0'}}</td>
+            <td data-label="%">{{topTenPorcentajeSKU[0] !== undefined ? topTenPorcentajeSKU[0] : '0'}}%</td>
             <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[0]}}">
                 <div [ngStyle]="{'background-color': topTenColoresRGB[0] }" class="colorx mb-3"></div>
               </abbr></td>
@@ -290,8 +336,8 @@
             <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[1]}}"><img
                   src="../../../../assets/productos/{{topTenTipoPrenda[1] !== '' ? topTenTipoPrenda[1] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
-            <td data-label="Total SKU">{{topTenTotalSKU[1]}}</td>
-            <td data-label="%">{{topTenPorcentajeSKU[1]}}%</td>
+            <td data-label="Total SKU">{{topTenTotalSKU[1] !== undefined ? topTenTotalSKU[1] : '0'[1]}}</td>
+            <td data-label="%">{{topTenPorcentajeSKU[1] !== undefined ? topTenPorcentajeSKU[1] : '0'}}%</td>
             <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[1]}}">
                 <div [ngStyle]="{'background-color': topTenColoresRGB[1] }" class="colorx mb-3"></div>
               </abbr></td>
@@ -300,8 +346,8 @@
             <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[2]}}"><img
                   src="../../../../assets/productos/{{topTenTipoPrenda[2] !== '' ? topTenTipoPrenda[2] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
-            <td data-label="Total SKU">{{topTenTotalSKU[2]}}</td>
-            <td data-label="%">{{topTenPorcentajeSKU[2]}}%</td>
+            <td data-label="Total SKU">{{topTenTotalSKU[2] !== undefined ? topTenTotalSKU[2] : '0'}}</td>
+            <td data-label="%">{{topTenPorcentajeSKU[2] !== undefined ? topTenPorcentajeSKU[2] : '0'}}%</td>
             <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[2]}}">
                 <div [ngStyle]="{'background-color': topTenColoresRGB[2] }" class="colorx mb-3"></div>
               </abbr></td>
@@ -310,8 +356,8 @@
             <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[3]}}"><img
                   src="../../../../assets/productos/{{topTenTipoPrenda[3] !== '' ? topTenTipoPrenda[3] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
-            <td data-label="Total SKU">{{topTenTotalSKU[3]}}</td>
-            <td data-label="%">{{topTenPorcentajeSKU[3]}}%</td>
+            <td data-label="Total SKU">{{topTenTotalSKU[3] !== undefined ? topTenTotalSKU[3] : '0'}}</td>
+            <td data-label="%">{{topTenPorcentajeSKU[3] !== undefined ? topTenPorcentajeSKU[3] : '0'}}%</td>
             <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[3]}}">
                 <div [ngStyle]="{'background-color': topTenColoresRGB[3] }" class="colorx mb-3"></div>
               </abbr></td>
@@ -320,8 +366,8 @@
             <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[4]}}"><img
                   src="../../../../assets/productos/{{topTenTipoPrenda[4] !== '' ? topTenTipoPrenda[4] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
-            <td data-label="Total SKU">{{topTenTotalSKU[4]}}</td>
-            <td data-label="%">{{topTenPorcentajeSKU[4]}}%</td>
+            <td data-label="Total SKU">{{topTenTotalSKU[4] !== undefined ? topTenTotalSKU[4] : '0'}}</td>
+            <td data-label="%">{{topTenPorcentajeSKU[4] !== undefined ? topTenPorcentajeSKU[4] : '0'}}%</td>
             <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[4]}}">
                 <div [ngStyle]="{'background-color': topTenColoresRGB[4] }" class="colorx mb-3"></div>
               </abbr></td>
@@ -330,8 +376,8 @@
             <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[5]}}"><img
                   src="../../../../assets/productos/{{topTenTipoPrenda[5] !== '' ? topTenTipoPrenda[5] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
-            <td data-label="Total SKU">{{topTenTotalSKU[5]}}</td>
-            <td data-label="%">{{topTenPorcentajeSKU[5]}}%</td>
+            <td data-label="Total SKU">{{topTenTotalSKU[5] !== undefined ? topTenTotalSKU[5] : '0'}}</td>
+            <td data-label="%">{{topTenPorcentajeSKU[5] !== undefined ? topTenPorcentajeSKU[5] : '0'}}%</td>
             <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[5]}}">
                 <div [ngStyle]="{'background-color': topTenColoresRGB[5] }" class="colorx mb-3"></div>
               </abbr></td>
@@ -340,8 +386,8 @@
             <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[6]}}"><img
                   src="../../../../assets/productos/{{topTenTipoPrenda[6] !== '' ? topTenTipoPrenda[6] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
-            <td data-label="Total SKU">{{topTenTotalSKU[6]}}</td>
-            <td data-label="%">{{topTenPorcentajeSKU[6]}}%</td>
+            <td data-label="Total SKU">{{topTenTotalSKU[6] !== undefined ? topTenTotalSKU[6] : '0'}}</td>
+            <td data-label="%">{{topTenPorcentajeSKU[6] !== undefined ? topTenPorcentajeSKU[6] : '0'}}%</td>
             <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[6]}}">
                 <div [ngStyle]="{'background-color': topTenColoresRGB[6] }" class="colorx mb-3"></div>
               </abbr></td>
@@ -350,8 +396,8 @@
             <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[7]}}"><img
                   src="../../../../assets/productos/{{topTenTipoPrenda[7] !== '' ? topTenTipoPrenda[7] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
-            <td data-label="Total SKU">{{topTenTotalSKU[7]}}</td>
-            <td data-label="%">{{topTenPorcentajeSKU[7]}}%</td>
+            <td data-label="Total SKU">{{topTenTotalSKU[7] !== undefined ? topTenTotalSKU[7] : '0'}}</td>
+            <td data-label="%">{{topTenPorcentajeSKU[7] !== undefined ? topTenPorcentajeSKU[7] : '0'}}%</td>
             <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[7]}}">
                 <div [ngStyle]="{'background-color': topTenColoresRGB[7] }" class="colorx mb-3"></div>
               </abbr></td>
@@ -360,8 +406,8 @@
             <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[8]}}"><img
                   src="../../../../assets/productos/{{topTenTipoPrenda[8] !== '' ? topTenTipoPrenda[8] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
-            <td data-label="Total SKU">{{topTenTotalSKU[8]}}</td>
-            <td data-label="%">{{topTenPorcentajeSKU[8]}}%</td>
+            <td data-label="Total SKU">{{topTenTotalSKU[8] !== undefined ? topTenTotalSKU[8] : '0'}}</td>
+            <td data-label="%">{{topTenPorcentajeSKU[8] !== undefined ? topTenPorcentajeSKU[8] : '0'}}%</td>
             <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[8]}}">
                 <div [ngStyle]="{'background-color': topTenColoresRGB[8] }" class="colorx mb-3"></div>
               </abbr></td>
@@ -370,8 +416,8 @@
             <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[9]}}"><img
                   src="../../../../assets/productos/{{topTenTipoPrenda[9] !== '' ? topTenTipoPrenda[9] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
-            <td data-label="Total SKU">{{topTenTotalSKU[9]}}</td>
-            <td data-label="%">{{topTenPorcentajeSKU[9]}}%</td>
+            <td data-label="Total SKU">{{topTenTotalSKU[9] !== undefined ? topTenTotalSKU[9] : '0'}}</td>
+            <td data-label="%">{{topTenPorcentajeSKU[9] !== undefined ? topTenPorcentajeSKU[9] : '0'}}%</td>
             <td data-label="Color TOP"><abbr style=" cursor:pointer" title="{{topTenColoresLetra[9]}}">
                 <div [ngStyle]="{'background-color': topTenColoresRGB[9] }" class="colorx mb-3"></div>
               </abbr></td>
